fix visibility bug on main

--- a/src/components/Main/Main.css
+++ b/src/components/Main/Main.css
@@ -4,6 +4,11 @@
   flex-direction: column;
   overflow-y: scroll;
   overflow-x: hidden;
+  flex: 1;
+}
+
+.Main-hideOnMobile {
+  display: none;
 }
 
 /*
@@ -15,8 +20,6 @@
   .Main-wrapper {
     margin-left: 6px;
     padding-top: 6px;
-    flex: 1;
-
   }
 }
 
